# nova-solaris

./: README.md  requirements.txt  setup.cfg  setup.py
nova_solaris/: __init__.py  version.py
nova_solaris/cmd/: compute_solaris.py
nova_solaris/common/: __init__.py  i18n.py
nova_solaris/solariszones/: __init__.py  config.py  driver.py  sysconfig.py  utils.py  volume_api.py  zone_config.py
