[metadata]
name = nova-solaris
summary = Solaris virtual computing drivers for Openstack nova.
description_file =
    README.md
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://github.com/openstack/nova-solaris
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: SunOS/Solaris
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords = openstack nova solaris

[files]
packages =
    nova_solaris

[entry_points]
oslo.config.opts =
    nova_solaris = nova_solaris.solariszones.config:list_opts
console_scripts =
    nova-compute-solaris = nova_solaris.cmd.compute_solaris:main

nova.virt =
    solariszones = nova_solaris.solariszones:SolarisZonesDriver

[compile_catalog]
directory = nova_solaris/locale
domain = nova-solaris

[update_catalog]
domain = nova-solaris
output_dir = nova_solaris/locale
input_file = nova_solaris/locale/nova-solaris.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova_solaris/locale/nova-solaris.pot